Deleted js-captcha and all evidence of ever using it.

--- a/captcha.html
+++ b/captcha.html
@@ -8,11 +8,10 @@
 
 <body>
     <h1>Moin, warte mal. Ich habe ein kleines Problemchen, dass du lösen musst bevor du weiter kannst :D</h1>
-    <form class="form" id="captchaForm">
-        <input class="jCaptcha" type="text" placeholder="Type in result please">
-        <button type="submit">Submit</button>
+    <form>
+
     </form>
-    <script src="/JCaptcha.js"></script>
+
 </body>
 
 </html>
